force-app/main/default/objects/Activity/fields/Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Bypassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when a subtask-chain step is skipped rather than actually completed, via the Skip action (available to the step's assignee or the person who assigned it). The task is still marked Status = Completed so the existing chain-advance logic activates the next step normally - this flag exists purely to distinguish "skipped" from "actually done" in the UI (and in reporting).</description>
    <label>Bypassed</label>
    <type>Checkbox</type>
</CustomField>