force-app/main/default/objects/Activity/fields/Manually_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Manually_Reassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when someone manually reassigns a not-yet-active subtask-chain step (Status = Waiting) via the Edit/Reassign action. The chain-advance trigger checks this before overwriting OwnerId with a freshly-resolved dynamic assignee when the step activates, so a manual override isn't silently clobbered.</description>
    <label>Manually Reassigned</label>
    <type>Checkbox</type>
</CustomField>