force-app/main/default/objects/Activity/fields/Parent_Task__c.field-meta.xml
<CustomField>
    <fullName>Parent_Task__c</fullName>
    <description>Id (as text) of the master task in a subtask chain. Not a real Lookup because the platform does not allow Task to be a lookup target on the Activity object (self-referencing Task relationships are unsupported). Blank on the master task itself and on ordinary manually-created tasks.</description>
    <label>Parent Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>