force-app/main/default/objects/Activity/fields/Review_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Review_Feedback__c</fullName>
    <description>Set when a Reviewer sends this task back instead of approving it - the reason shown to the assignee. Overwritten on each send-back; not a history log.</description>
    <label>Review Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>