force-app/main/default/objects/Activity/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional - when set, completing this task sends it to this person for review (Status = Pending Review) instead of marking it Completed directly. Only this user may Approve or Send Back a task pending their review.</description>
    <label>Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Tasks to Review</relationshipLabel>
    <relationshipName>Tasks_To_Review</relationshipName>
    <type>Lookup</type>
</CustomField>