force-app/main/default/objects/Activity/fields/Snoozed_Until__c.field-meta.xml
<CustomField>
    <fullName>Snoozed_Until__c</fullName>
    <description>When set, the Task Due Reminder utility bar popup hides this task until this date/time, then shows it again.</description>
    <label>Snoozed Until</label>
    <type>DateTime</type>
</CustomField>