force-app/main/default/objects/Activity/fields/Subtask_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Subtask_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated only for tasks generated from a Subtask Template chain. Blank on ordinary manually-created tasks, which the subtask chain engine and validation ignore entirely.</description>
    <label>Subtask Template Item</label>
    <referenceTo>Subtask_Template_Item__c</referenceTo>
    <relationshipLabel>Generated Tasks</relationshipLabel>
    <relationshipName>Generated_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>