force-app/main/default/objects/Activity/fields/Waiting_On_Task__c.field-meta.xml
<CustomField>
    <fullName>Waiting_On_Task__c</fullName>
    <description>Id (as text) of another task this one is manually marked as waiting on, chosen by the user in the New Task modal when Status = Waiting. Not a real Lookup because the platform does not allow Task to be a lookup target on the Activity object (self-referencing Task relationships are unsupported) - same workaround as Parent_Task__c. Independent of the subtask-chain system: this is for ad hoc manually-created tasks, not template-generated chain steps.</description>
    <label>Waiting On Task</label>
    <length>18</length>
    <type>Text</type>
</CustomField>